# mudenet-pytorch

./: .gitignore  NOTATION.md  README.md  pyproject.toml
configs/: cable_screen.yaml  cable_screen_e5.4.yaml  default.yaml  mvtec_ad.yaml  mvtec_loco.yaml  visa.yaml
docs/architecture/: assumptions-register.md  optimization-log.md  overview.md
docs/architecture/decisions/: 0001-teacher-receptive-field.md  README.md
src/mudenet/: __init__.py  __main__.py
src/mudenet/cli/: __init__.py  __main__.py  distill.py  evaluate.py  train.py  utils.py
src/mudenet/config/: __init__.py  loading.py  schema.py
src/mudenet/evaluation/: __init__.py  metrics.py  reporting.py
src/mudenet/inference/: __init__.py  pipeline.py  scoring.py
src/mudenet/models/: __init__.py  autoencoder.py  common.py  feature_extractor.py  teacher.py
src/mudenet/training/: __init__.py  distillation.py  losses.py  trainer.py
src/mudenet/utils/: __init__.py  seed.py
src/mudenet/visualization/: __init__.py  overlay.py
tests/: conftest.py
tests/test_cli/: test_cli.py
tests/test_config/: test_loading.py  test_schema.py
tests/test_data/: test_datasets.py  test_transforms.py  test_utils.py
tests/test_evaluation/: test_metrics.py  test_reporting.py
tests/test_inference/: test_pipeline.py  test_scoring.py
tests/test_models/: test_autoencoder.py  test_common.py  test_feature_extractor.py  test_state_dict.py  test_teacher.py  test_train_eval_mode.py
tests/test_training/: test_distillation.py  test_losses.py  test_trainer.py
tests/test_visualization/: test_overlay.py
